make it work for HGDB

--- a/lmdbjni-osx64/pom.xml
+++ b/lmdbjni-osx64/pom.xml
@@ -82,7 +82,7 @@
             <type>zip</type>
           </nativeSrcDependency>
           <configureArgs>
-            <arg>--with-lmdb=${env.LMDB_HOME}</arg>
+            <arg>--with-lmdb=${basedir}/../lmdbjni/src/main/native-package/src</arg>
           </configureArgs>
         </configuration>
       </plugin>
